tests/programs/valid/BoolAnd.java
public class BoolAnd {
    public static void main(String[] args) {
        boolean and = (true && false);
        boolean or = (true || false);
    }
}
