tests/programs/invalid/array_suffix.java
public class array_suffix {
  public A() {}
  protected int x[];
}